--- a/app/globals.css
+++ b/app/globals.css
@@ -154,27 +154,26 @@
   body {
     @apply bg-background text-foreground;
   }
-}
 
-/* UTILITIES */
-
-@utility remove-scrollbar {
-  &::-webkit-scrollbar {
+  /* REMINDER: ITS NOT WORKING */
+  .remove-scrollbar::-webkit-scrollbar {
     width: 0;
     height: 0;
   }
 
-  &::-webkit-scrollbar-track {
+  .remove-scrollbar::-webkit-scrollbar-track {
     background: transparent;
   }
 
-  &::-webkit-scrollbar-thumb {
+  .remove-scrollbar::-webkit-scrollbar-thumb {
     background: transparent;
   }
+}
 
-  &::-webkit-scrollbar-thumb:hover {
-    background: transparent;
-  }
+/* UTILITIES */
+
+@utility scroll-hidden {
+  -ms-overflow-style: none;
 }
 
 @utility sidebar {
@@ -230,4 +229,52 @@
 
 @utility text-12-semibold {
   @apply text-[12px] leading-4 font-semibold;
+}
+
+@utility header {
+  @apply text-32-bold md:text-36-bold;
+}
+
+@utility input-phone {
+  @apply mt-2 h-11 rounded-md px-3 text-sm border bg-dark-400 placeholder:text-dark-600! border-dark-500;
+}
+
+/* SHADCN OVERRIDES */
+
+@utility shad-input {
+  @apply bg-dark-400! placeholder:text-dark-600! border-dark-500! h-11! focus-visible:ring-0! focus-visible:ring-offset-0!;
+}
+
+@utility shad-primary-btn {
+  @apply bg-green-500 text-white;
+}
+
+/* REACT PHONE NUMBER INPUT OVERRIDES */
+
+.PhoneInputInput {
+  outline: none;
+  margin-left: 4px;
+  background: #1a1d21;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.PhoneInputInput::placeholder {
+  color: #edf4fd;
+}
+
+.PhoneInputCountrySelect {
+  background-color: var(--color-dark-400);
+  color: var(--color-dark-700);
+}
+
+.PhoneInputCountrySelect option {
+  background-color: var(--color-dark-400);
+  color: var(--color-dark-700);
+}
+
+.PhoneInputCountrySelect option:checked,
+.PhoneInputCountrySelect option:hover {
+  background-color: var(--color-dark-500);
+  color: #fff;
 }
