--- a/app/globals.css
+++ b/app/globals.css
@@ -218,7 +218,7 @@
 }
 
 @utility input-phone {
-  @apply mt-2 h-11 rounded-md px-3 text-sm border bg-dark-400 placeholder:text-dark-600! border-dark-500;
+  @apply mt-2 h-11 rounded-md px-3 text-sm border bg-dark-400 placeholder:text-dark-600 border-dark-500;
 }
 
 /* SHADCN OVERRIDES */
