--- a/app/globals.css
+++ b/app/globals.css
@@ -239,6 +239,18 @@
   @apply bg-green-500 text-white;
 }
 
+@utility shad-select-trigger {
+  @apply bg-dark-400  placeholder:text-dark-600 border-dark-500 h-11 focus:ring-0 focus:ring-offset-0;
+}
+
+@utility shad-select-content {
+  @apply bg-dark-400 border-dark-500;
+}
+
+@utility shad-textArea {
+  @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 focus-visible:ring-0 focus-visible:ring-offset-0;
+}
+
 /* REACT PHONE NUMBER INPUT OVERRIDES */
 
 .PhoneInputInput {
