--- a/app/globals.css
+++ b/app/globals.css
@@ -229,6 +229,14 @@
   @apply flex h-full flex-1 items-center gap-2 rounded-md border border-dashed border-dark-500 bg-dark-400 p-3;
 }
 
+@utility file-upload {
+  @apply text-12-regular flex cursor-pointer  flex-col items-center justify-center gap-3 rounded-md border border-dashed border-dark-500 bg-dark-400 p-5;
+}
+
+@utility file-upload_label {
+  @apply flex flex-col justify-center gap-2 text-center text-dark-600;
+}
+
 /* SHADCN OVERRIDES */
 
 @utility shad-input {
