--- a/app/globals.css
+++ b/app/globals.css
@@ -237,6 +237,10 @@
   @apply flex flex-col justify-center gap-2 text-center text-dark-600;
 }
 
+@utility checkbox-label {
+  @apply cursor-pointer text-sm font-medium text-dark-700 peer-disabled:cursor-not-allowed peer-disabled:opacity-70 md:leading-none;
+}
+
 /* SHADCN OVERRIDES */
 
 @utility shad-input {
