feat: add appointment page

--- a/app/globals.css
+++ b/app/globals.css
@@ -276,6 +276,10 @@
   @apply bg-dark-400 placeholder:text-dark-600 border-dark-500 focus-visible:ring-0 focus-visible:ring-offset-0;
 }
 
+@utility shad-danger-btn {
+  @apply bg-red-700 text-white;
+}
+
 /* REACT PHONE NUMBER INPUT OVERRIDES */
 
 .PhoneInputInput {
