--- a/app/globals.css
+++ b/app/globals.css
@@ -262,6 +262,23 @@
   @apply flex w-full flex-col items-center gap-8 border-y-2 border-dark-400 py-8 md:w-fit md:flex-row;
 }
 
+@utility admin-header {
+  @apply sticky top-3 z-20 mx-3 flex items-center justify-between rounded-2xl bg-dark-200 px-[5%] py-5 shadow-lg xl:px-12;
+}
+
+@utility admin-main {
+  @apply flex flex-col items-center space-y-6 px-[5%] pb-12 xl:space-y-12 xl:px-12;
+}
+
+@utility admin-stat {
+  /* @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10; */
+  @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10;
+}
+
+@utility stat-card {
+  @apply flex flex-1 flex-col gap-6 rounded-2xl bg-cover p-6 shadow-lg;
+}
+
 /* SHADCN OVERRIDES */
 
 @utility shad-input {
