--- a/app/globals.css
+++ b/app/globals.css
@@ -271,12 +271,19 @@
 }
 
 @utility admin-stat {
-  /* @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10; */
   @apply flex w-full flex-col justify-between gap-5 sm:flex-row xl:gap-10;
 }
 
 @utility stat-card {
   @apply flex flex-1 flex-col gap-6 rounded-2xl bg-cover p-6 shadow-lg;
+}
+
+@utility status-badge {
+  @apply flex w-fit items-center gap-2 rounded-full px-4 py-2;
+}
+
+@utility table-actions {
+  @apply flex w-full items-center justify-between space-x-2 p-4;
 }
 
 /* SHADCN OVERRIDES */
@@ -315,6 +322,30 @@
 
 .shad-otp-slot {
   @apply text-36-bold justify-center flex border border-dark-500 rounded-lg size-16 gap-4;
+}
+
+.shad-dialog {
+  @apply bg-dark-400 border-dark-500 outline-0;
+}
+
+.shad-dialog button {
+  @apply focus:ring-0 focus:ring-offset-0 focus-visible:border-none focus-visible:outline-none focus-visible:ring-transparent focus-visible:ring-offset-0;
+}
+
+.shad-table {
+  @apply rounded-lg overflow-hidden;
+}
+
+.shad-table-row-header {
+  @apply border-b border-dark-400 text-light-200 hover:bg-transparent;
+}
+
+.shad-table-row {
+  @apply border-b border-dark-400 text-light-200;
+}
+
+@utility shad-gray-btn {
+  @apply border border-dark-500 cursor-pointer bg-dark-400 text-white;
 }
 
 /* REACT PHONE NUMBER INPUT OVERRIDES */
